Правка тестов в блоке 6